# EDLine

./: .gitignore  CMakeLists.txt  LineDetect.kdev4  README.md
.kdev4/: LineDetect.kdev4
app/: show.cpp  time_cost.cpp
image/: cam.txt
include/: EDLine.h  Gradient.h  Gradient.hpp  Sobel.hpp  Utility.hpp
src/: EDLine.cpp  Gradient.cpp
